testsuite/tests/interpreter_errors/invalid_kind/test.out
main.adb
script:1:19: error: Invalid kind name: PreposterouslyInvalidKind
1 | query p when p is PreposterouslyInvalidKind
  |                   ^^^^^^^^^^^^^^^^^^^^^^^^^ 

